# fused3S

./: CMakeLists.txt  README.md  requirements.txt
baselines/: cpu_baseline.cpp  gpu_baseline.cu
data/: data_loader.py
data/citeseer/: col_idx.txt  meta.txt  row_ptr.txt
data/cora/: meta.txt  row_ptr.txt
include/: utils.cuh
poster/: poster.fdb_latexmk  poster.fls  poster.tex
sc_csvs/: baseline_cora_ncu_results.csv  v0_cora_ncu_results.csv  v1_cora_ncu_results.csv  v2_cora_ncu_results.csv
src/: converter.cu  fused3s_v0.cu  fused3s_v1.cu  fused3s_v2.cu
tests/: test_baselines.cu  test_fused_3s_v0.cu  test_fused_3s_v1.cu  test_fused_3s_v2.cu
